objects/Contract_Billing_Plan__c.object
<CustomObject>
    <description>The billing plan for contracts</description>
    <fields>
        <fullName>Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Rate__c</fullName>
        <label>Billing Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Vessel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Vessel</label>
        <referenceTo>Contract_Vessels__c</referenceTo>
        <relationshipLabel>Contract Billing Plans</relationshipLabel>
        <relationshipName>Contract_Billing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Billing Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract Billing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Billing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>